# art-pipeline-design

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/art_pipeline/: __init__.py  annotations.py  api.py  asset_outputs.py  candidates.py  click_detect.py  codex_assets.py  codex_final_analysis_mask.py  codex_final_brief.py  codex_final_controller_launcher.py  codex_final_inputs.py  codex_final_jobs.py  codex_final_layout.py  codex_final_paths.py  codex_final_prompt.py  codex_final_quality.py  codex_final_repair_inputs.py  codex_final_sources.py  codex_postprocess.py  codex_process_control.py  detection.py  detection_results.py  elements.py  export_files.py  export_materialization.py  exporter.py  extraction.py  mask_refine.py  masks.py  parent_repair_contracts.py  proposals.py  provider_config.py  qa.py  repair_tasks.py  segment_assets.py  segment_components.py  segment_mask_repair.py  segment_quality.py  segmentation.py  thumbnails.py  (+1 more)
backend/tests/: codex_final_fixtures.py  codex_final_visual_harness.py  test_candidates.py  test_click_detect_api.py  test_codex_cli_provider.py  test_codex_final_analysis_mask.py  test_codex_final_assets.py  test_codex_final_brief.py  test_codex_final_controller_launcher.py  test_codex_final_controller_queue.py  test_codex_final_finalize.py  test_codex_final_jobs.py  test_codex_final_layout.py  test_codex_final_postprocess.py  test_codex_final_quality.py  test_codex_final_task_api.py  test_codex_final_task_ingest_api.py  test_codex_final_task_near_copy.py  test_detection_api.py  (+24 more)
(+299 files in other folders)
