[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "art-pipeline-backend"
version = "0.1.0"
description = "FastAPI backend for the art pipeline workbench demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pillow>=10.4,<11.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]
model = [
  "accelerate>=0.33",
  "safetensors>=0.4",
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.45",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["art_pipeline*"]
